Removed scroll bars and fixed z-index issue.

--- a/src/components/navBar/styles/styles.module.scss
+++ b/src/components/navBar/styles/styles.module.scss
@@ -7,6 +7,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     background-color: white;
     position: relative;
+    z-index: 3;
 
     .pageLink {
         color: black;
