--- a/src/scenes/data/components/controlsBtn/style/style.module.scss
+++ b/src/scenes/data/components/controlsBtn/style/style.module.scss
@@ -5,4 +5,6 @@
     width: 30px;
     height: 40px;
     float: left;
+    position: relative;
+    z-index: 2;
 }
