--- a/src/scenes/data/components/tooltip/style/style.module.scss
+++ b/src/scenes/data/components/tooltip/style/style.module.scss
@@ -7,4 +7,5 @@
     border-radius: 3px;
     padding: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
 }
