--- a/src/scenes/data/style/structure.module.scss
+++ b/src/scenes/data/style/structure.module.scss
@@ -14,6 +14,8 @@
         transition: margin .5s;
         overflow-y: scroll;
         -ms-overflow-style: none;
+        position: relative;
+        z-index: 1;
     }
 
     .controls::-webkit-scrollbar {
@@ -31,7 +33,13 @@
         overflow-y: scroll;
         padding-top: 50px;
         padding-bottom: 50px;
+        -ms-overflow-style: none;
     }
+
+    .content::-webkit-scrollbar {
+        display: none;
+    }
+
 
     .fullWidthContent {
         margin-left: 0;
